--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Piano Simulador</title>
 
-  <link rel="stylesheet" href="./src/pastastyles/reset.css">
-  <link rel="stylesheet" href="./src/pastastyles/main.css">
+  <link rel="stylesheet" href="./src/styles/reset.css">
+  <link rel="stylesheet" href="./src/styles/main.css">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,6 +44,6 @@
       <li class="key white" data-key=";"><span>;</span></li>
     </ul>
   </div>
-  <script src="./src/pastascripts/engine.js"></script>
+  <script src="./src/scripts/engine.js"></script>
 </body>
 </html>
