--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Piano Simulador</title>
-
-  <link rel="stylesheet" href="./src/styles/reset.css">
-  <link rel="stylesheet" href="./src/styles/main.css">
+  <title>Piano Simulator</title>
+  <link rel="stylesheet" href="./src/pastastyles/reset.css">
+  <link rel="stylesheet" href="./src/pastastyles/main.css">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,6 +43,6 @@
       <li class="key white" data-key=";"><span>;</span></li>
     </ul>
   </div>
-  <script src="./src/scripts/engine.js"></script>
+  <script src="./src/pastascripts/engine.js"></script>
 </body>
 </html>
